--- a/mysite/polls/templates/polls/details.html
+++ b/mysite/polls/templates/polls/details.html
@@ -1,2 +1,6 @@
-<h1>Test Details</h1>
-{{question}}
+<h1>{{ question.question_text }}</h1>
+<ul>
+{% for choice in question.choice_set.all %}
+    <li>{{ choice.choice_text }}</li>
+{% endfor %}
+</ul>
