--- a/mysite/polls/templates/polls/index.html
+++ b/mysite/polls/templates/polls/index.html
@@ -1,9 +1,33 @@
-{% if latest_question_list %}
-    <ul>
-    {% for question in latest_question_list %}
-        <li><a href="{% url 'polls:details' question.id %}">{{ question.question_text }}</a></li>
-    {% endfor %}
+{% load tailwind_tags %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Poll Vote</title>
+  {% tailwind_css %}
+</head>
+<body>
+  <main>
+    <h1 class="text-2xl bg-slate-500">Poll Vote</h1>
+    {% if latest_question_list %}
+		<ul>
+      {% for question in latest_question_list %}
+      <li>
+        <a 
+          href="{% url 'polls:details' question.id %}"
+        >
+          {{ question.question_text }}
+        </a>
+      </li>
+      {% endfor %}
     </ul>
-{% else %}
-    <p>No polls are available.</p>
-{% endif %}
+    {% else %}
+      <p>No polls are available.</p>
+    {% endif %}
+  </main>
+</body>
+</html>
+
+
